organização dos arquivos

--- a/Site/assets/css/calculadora.css
+++ b/Site/assets/css/calculadora.css
@@ -11,7 +11,7 @@ html {
 body {
     /*ESTOU FALANDO PARA TODO QUE ESTAO NA TAG BODY, RECEBAM A FONT MOSTSERRAT E O FUNDO DO BODY VAI SER #F5F5F5 hexadecimal */
     font-family: "Montserrat", sans-serif;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
 }
 
 h1 {
