adicionandoo footer e alterando fotos

--- a/Site/assets/css/index.css
+++ b/Site/assets/css/index.css
@@ -5,7 +5,7 @@
 
 .tela-inicial {
     height: 100%;
-    background-image: url('https://www.aluracursos.com/blog/assets/entienda-el-codigo-binario/banner.jpg');
+    background-image: url('/Site/assets/img/Wasabi_Site_0.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
