--- a/Site/assets/css/MenuNav.css
+++ b/Site/assets/css/MenuNav.css
@@ -3,20 +3,19 @@
     background-color: #F5F5F5;
     height: 100px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 40px;
+    justify-content: space-around;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    align-items: center;
 }
 
-.navbar_lista {
+.navbar ul {
     display: flex;
     gap: 24px;
     padding: 0;
 }
 
-.navbar_lista a {
-    font-size: 24px;
+.navbar a {
+    font-size: 22px;
     font-weight: 500;
     color: #324224;
     padding: 10px 0;
@@ -44,4 +43,33 @@
 .navbar_container-redesSociais img:hover {
     transition: 0.3s ease-in-out;
     scale: 1.2;
+}
+
+.btn_login a {
+    color: #2E852C;
+    border: 2px solid #2E852C;
+    padding: 8px 16px;
+    border-radius: 5px;
+}
+
+.btn_login a:hover {
+    background-color: #33522c;
+    border: 2px solid #33522c;
+    color: #ffffff;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.295);
+    transition: all 0.3s linear; 
+}
+
+
+.btn_cadastro a {
+    color: white;
+    padding: 9px 16px;
+    border-radius: 5px;
+    background-color: #2E852C;
+}
+
+.btn_cadastro a:hover {
+    background-color: #33522c;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.295);
+    transition: all 0.3s linear; 
 }
