--- a/Site/assets/css/MenuNav.css
+++ b/Site/assets/css/MenuNav.css
@@ -6,6 +6,10 @@
     justify-content: space-around;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
 
 .navbar ul {
