--- a/Site/assets/css/style.css
+++ b/Site/assets/css/style.css
@@ -7,6 +7,8 @@ body {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
     background-color: white;
+    padding-top: 100px; /* Isso vai "empurrar" o conteúdo para baixo, equivalente à altura da navbar */
+      
 }
 
 li, ul, a {
