--- a/Site/assets/css/fale-conosco.css
+++ b/Site/assets/css/fale-conosco.css
@@ -117,14 +117,14 @@ html {
 .informacoes-contato {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     margin-top: 20px;
     padding: 20px;
     position: relative;
+    justify-content: space-evenly;
 }
 
 .caixa-contato {
-    width: 45%;
+    width: 31%;
     text-align: left;
 }
 
@@ -165,7 +165,7 @@ html {
     border-radius: 15px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.4);
     text-align: center;
-    width: 90%;
+    width: 60%;
     max-width: 1000px;
 }
 
