--- a/Site/assets/css/fale-conosco.css
+++ b/Site/assets/css/fale-conosco.css
@@ -45,7 +45,7 @@ html {
     height: 220px;
     width: 100%;
     max-width: 650px;
-    margin-top: 220px;
+    margin-top: 160px;
     margin-left: 5%;
     border-radius: 50px;
     box-shadow: 0px 20px 20px 10px #0000009c;
@@ -130,7 +130,8 @@ html {
 
 .caixa-contato strong {
     color: #000;
-    font-size: 2.5rem;
+    font-size: 2.4rem;
+    font-weight: 600;
 }
 
 .caixa-contato p {
@@ -153,6 +154,7 @@ html {
 /* TERCEIRA SECTION - mensagem para ONDO */
 .container-mensagem {
     margin-top: 100px;
+    margin-bottom: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -231,7 +233,7 @@ html {
         margin-left: 5%;
         width: 90%;
     }
-    
+
     .informacoes-contato {
         flex-direction: column;
         padding: 0;
