--- a/Site/assets/css/style.css
+++ b/Site/assets/css/style.css
@@ -77,14 +77,14 @@ h1, h2, h3, h4, h5, h6 {
 .card p {
     font-size: 24px;
     font-weight: bold; 
-    color: #324224;  
+    color: #1E2F1A;  
 }
 
 /* Estilo do rodapé */
 .footer {
     width: 100%;
     height: 183px;
-    background-color: #324224;
+    background-color: #1E2F1A;
     position: relative; 
     margin-top: 20px;
 }
