--- a/Site/assets/css/style.css
+++ b/Site/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     background-color: white;
     padding-top: 100px; /* Isso vai "empurrar" o conteúdo para baixo, equivalente à altura da navbar */
-      
+    font-size: 19px;
 }
 
 li, ul, a {
