--- a/repo-sprint2/site/assets/css/calculadora.css
+++ b/repo-sprint2/site/assets/css/calculadora.css
@@ -19,12 +19,15 @@ h1 {
     padding-top: 20px;
     color: #50984E;
     text-align: center;
+    margin-top: 55px;
 }
 
 .div_conteudo {
     display: flex;
     width: 100%;
     height: 100vh; 
+    margin-top: 22px;
+    margin-bottom: 75px;
 }
 
 .div_mensagem {
